Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79914

CustomMaterial should support QColor property

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.14.0 RC1
    • 5.14
    • Quick: 3D
    • None
    • 8b768a4a077e9c80ec411129a538b77e7bc404af

    Description

      Internally, it seems it is regarded as a uniform in shaders.

      If we add QColor property to CustomMaterial, the app crashes with assert(0).

      Currently,

      double, bool, vector2d, vector3d, vector4d, int and texture are supported.

      QColor will also be common one to use especially considering compatibility to DefaultMaterial.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            notohge Norihito Tohge
            notohge Norihito Tohge
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes