Enable to use QColor property in CustomMaterial

Task-number: QTBUG-79914
Change-Id: Ieebb77dbfebda737d23b4bd31dce5cbb9aa1b123
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>